name:                bitpay-client
version:             0.0.1
synopsis:            BitPay.com API client
-- description:
homepage:            https://github.com/k0001/bitpay-client
license:             BSD3
license-file:        LICENSE
copyright:           Copyright (c) Renzo Carbonara 2014
author:              Renzo Carbonara
maintainer:          renzocarbonaraλgmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src/lib
  exposed-modules:
      Web.BitPay.Client
      Web.BitPay.Types
  build-depends:
      aeson >=0.7 && <0.9
    , base >=4.7 && <4.8
    , base16-bytestring >=0.1 && <0.2
    , binary >=0.7 && <0.8
    , bytestring >=0.9.2.1 && <0.11
    , exceptions >=0.6 && <0.7
    , haskoin >=0.1 && <0.2
    , http-client >=0.3.5 && <0.5
    , http-client-tls >=0.2 && <0.3
    , http-types >=0.8 && <0.9
    , lens >=4.4 && <4.5
    , lens-aeson >=1 && <1.1
    , text >=0.11 && <1.2
    , time >=1.4 && <1.6
    , transformers >=0.2 && <0.5
    , unordered-containers >=0.2 && <0.3
    , uuid >=1.3 && <1.4
  ghc-options: -Werror -Wall -O2

executable bitpay
  default-language: Haskell2010
  hs-source-dirs:   src/bitpay
  main-is:          Main.hs
  build-depends:
      base
    , bitpay-client
    , bytestring
    , cipher-aes >=0.2 && <0.3
    , cryptohash
    , haskoin
    , http-client
    , http-client-tls
    , time
  ghc-options: -Werror -Wall -O2 -threaded